# legendary-fortnight-io

./: .editorconfig  .gitignore  CONTRIBUTING.md  QUICKSTART.md  README.md  REPOSITORY_OVERVIEW.md
experiments/: README.md
experiments/2024-10-15-rate-card-converter/: .env.example  ARCHITECTURE.md  Dockerfile  README.md  SYSTEM_DESIGN.md  docker-compose.azure.yml  docker-compose.yml  pyproject.toml
experiments/2024-10-15-rate-card-converter/samples/: generate_samples.py  sample_rate_card.xlsx
experiments/2024-10-15-rate-card-converter/src/: __init__.py
experiments/2024-10-15-rate-card-converter/src/api/: __init__.py  app.py  dependencies.py
experiments/2024-10-15-rate-card-converter/src/api/v1/: __init__.py
experiments/2024-10-15-rate-card-converter/src/application/: __init__.py
experiments/2024-10-15-rate-card-converter/src/application/use_cases/: __init__.py  get_rate_card.py  process_document.py  upload_document.py
experiments/2024-10-15-rate-card-converter/src/config/: __init__.py  container.py  settings.py
experiments/2024-10-15-rate-card-converter/src/domain/: __init__.py  exceptions.py
experiments/2024-10-15-rate-card-converter/src/domain/entities/: __init__.py  job.py  rate_card.py
experiments/2024-10-15-rate-card-converter/src/infrastructure/: __init__.py
experiments/2024-10-15-rate-card-converter/tests/: __init__.py  conftest.py
experiments/2024-10-15-rate-card-converter/tests/fixtures/: sample.xlsx
experiments/2024-10-15-rate-card-converter/tests/integration/: __init__.py  test_api_endpoints.py
experiments/2024-10-15-rate-card-converter/tests/unit/: test_langchain_mapper.py  test_pdf_extractor.py  test_use_cases.py  test_xlsx_extractor.py
experiments/rate-card-conversion/: README.md  architecture.md  decision-log.md  pyproject.toml
experiments/rate-card-conversion/app/: agentic_orchestrator.py  config.py  extractors.py  llm_gateway.py  main.py  mapping.py  pipeline.py  rag.py  schemas.py  validators.py
experiments/rate-card-conversion/data/: sample_rate_card.csv
experiments/rate-card-conversion/mcp_server/: README.md  __init__.py  server.py
experiments/rate-card-conversion/tests/: test_hybrid_agent.py  test_pipeline.py
foundations/: README.md
(+74 files in other folders)
