[project]
name = "rate-card-converter"
version = "0.1.0"
description = "Convert freight carrier rate cards from PDF/Excel to a standardized schema using LLM-assisted semantic mapping."
requires-python = ">=3.10"

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "langchain>=0.3.0,<0.4.0",
    "langchain-openai>=0.2.0,<0.3.0",
    "langchain-core>=0.3.0,<0.4.0",
    "langchain-community>=0.3.0,<0.4.0",
    "openai>=1.40.0,<2.0.0",
    "pdfplumber>=0.11.0",
    "openpyxl>=3.1.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0,<1.0.0",
    "anyio>=4.0.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov>=5.0.0,<7.0.0",
    "faker==30.3.0",
    "httpx==0.27.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 88
target-version = "py310"
