[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rate-card-conversion"
version = "0.1.0"
description = "GenAI-assisted carrier rate-card conversion service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-multipart>=0.0.9",
  "pandas>=2.2.0",
  "openpyxl>=3.1.0",
]

[project.optional-dependencies]
pdf = ["pdfplumber>=0.11.0"]
llm = ["langchain>=0.2.0", "langchain-openai>=0.1.8"]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "ruff>=0.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
